--- a/resources/js/assets/css/config.css
+++ b/resources/js/assets/css/config.css
@@ -1,5 +1,5 @@
 :root {
-    --principal: #2a9af3;
+    --principal: #ffee58;
     --principal_hover: #40a5f7;
     --principal_transparent: #2a99f3c2;
     --secundario: #f1f1f1;
@@ -7,6 +7,7 @@
     --correcto: #d2e7c9;
     --transparente: #000000bd;
     --progress: #4b5563;
+    --dark: #212121;
 }
 
 html {
@@ -46,7 +47,7 @@ iframe {
 .btn_principal {
     cursor: pointer;
     background-color: var(--principal);
-    color: white;
+    color: black;
     padding: 10px;
 }
 
@@ -58,7 +59,7 @@ iframe {
 .__sidebar .active {
     border-radius: 8px;
     background-color: var(--principal);
-    color: white;
+    color: black;
 }
 
 /* Estilo del contenedor del cajón de navegación */
