Finalizacion Modulos y Reportes

--- a/resources/js/assets/css/config.css
+++ b/resources/js/assets/css/config.css
@@ -7,7 +7,7 @@
     --correcto: #d2e7c9;
     --transparente: #000000bd;
     --progress: #4b5563;
-    --dark: #212121;
+    --dark: #dfdfdf;
 }
 
 html {
